# cs271-project

./: .gitignore  README.md  alphaBeta.py  othello.py  othello_ctypes.py  runMiniMax.py  run_evaluation.py  run_manual_play.py  test_AlphaBeta.py  test_minimax_play.py
othello-cpp/: CMakeLists.txt  build_all.sh  othello.h  othello_ctypes.cc  othello_test.cc
scripts/: demo_dhconnelly.py  demo_print.py  demo_user_input.py
tests/: test_BW_play.py  test_io.py  test_legal_moves.py  test_move.py  test_third_party_board_format.py
